--- a/CalculadoraIMC-iOS/Base.lproj/Main.storyboard
+++ b/CalculadoraIMC-iOS/Base.lproj/Main.storyboard
@@ -128,9 +128,13 @@
             <point key="canvasLocation" x="115.26717557251908" y="-109.1549295774648"/>
         </scene>
     </scenes>
+    <color key="tintColor" systemColor="systemIndigoColor"/>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
